--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Lucas-0714 | GitHub</title>
   </head>
   <body>
-    <a herf="https://github.com/">GitHub</a>
+    <a href="https://github.com/" style="color:#000;" size="5">GitHub</a>
     <br>
     <h1 style="color:#32a852;">Lucas-0714</h1>
-    <a herf="https://github.com/Lucas-0714/" style="background-color:#0ca0eb;">My GitHub Homepage</a>
+    <a href="https://github.com/Lucas-0714/" style="background-color:#0ca0eb;color:#fff;">My GitHub Homepage</a>
   </body>
 </html>
