--- a/sb/index.html
+++ b/sb/index.html
@@ -9,5 +9,12 @@
     <h1> You are sb.</h1>
     <br>
     <sign>GitHub Pages Lucas-0714</sign>
+    <intro>
+      <div class="flex;">
+        <noun>n.</noun>
+        <space>&nbsp;</space>
+        <name>Smart Buddy (聰明夥伴)</name>
+      </div>
+    </intro>
   </body>
 </html>
