--- a/sb/index.html
+++ b/sb/index.html
@@ -8,13 +8,13 @@
     <br>
     <h1> You are sb.</h1>
     <br>
-    <sign>GitHub Pages Lucas-0714</sign>
     <intro>
       <div class="flex;">
         <noun>n.</noun>
         <space>&nbsp;</space>
-        <name>Smart Buddy (聰明夥伴)</name>
+        <name style="font-size:30px;">Smart Buddy (聰明夥伴)</name>
       </div>
     </intro>
+    <sign>GitHub Pages Lucas-0714</sign>
   </body>
 </html>
