--- a/sb/index.html
+++ b/sb/index.html
@@ -21,11 +21,14 @@
         <name style="font-size:30px;">Smart Buddy (聰明夥伴)</name>
       </div>
     </intro>
+    <br><br>
     <name>
+      <div style="text-align: center; background-color: lightblue;">SB註冊表</div>
       <div id="targetText">×××是SB</div>
       <input type="text" id="inputText" placeholder="×××">
       <button id="updateButton">載入</button>
     </name>
+    <br><br>
     <sign>GitHub Pages Lucas-0714</sign>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
