--- a/sb/index.html
+++ b/sb/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <br>
-    <h1> You are sb.</h1>
+    <h1 style="font-size:45px;"> You are sb.</h1>
     <br>
     <intro>
       <div class="flex;">
@@ -23,9 +23,9 @@
     </intro>
     <br><br>
     <name>
-      <div style="text-align: center; background-color: lightblue;">SB註冊表</div>
-      <div id="targetText">×××是SB</div>
-      <input type="text" id="inputText" placeholder="×××">
+      <div style="text-align: center; background-color: lightblue;font-size:15px;">SB註冊表</div>
+      <div id="targetText" style="font-size:20px;">×××是SB</div>
+      <input type="text" id="inputText" placeholder="×××" style="font-size:20px;">
       <button id="updateButton">載入</button>
     </name>
     <br><br>
