--- a/sb/index.html
+++ b/sb/index.html
@@ -4,6 +4,11 @@
   <head>
     <title>SB</title>
       <style>
+        body {
+          background-image: url('body {
+      background-image: url('https://i.imgur.com/9DXLRfW.jpeg');
+        }
+        
         #targetText {
           font-size: 1.5em;
           margin-bottom: 10px;
