--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <html lang="zh_TW">
   <head>
     <title>Lucas-0714 | GitHub</title>
+    <style>
+      body {
+        background-image: url('https://i.imgur.com/9DXLRfW.jpeg');
+      }
+    </style>
   </head>
   <body>
     <a href="https://github.com/" style="color:#000;" font-size="5">GitHub</a>
