--- a/sb/index.html
+++ b/sb/index.html
@@ -28,9 +28,9 @@
     <br><br>
     <name>
       <div style="text-align: center; background-color: lightblue;font-size:30px;">SB註冊表</div>
-      <div id="targetText" style="font-size:20px;">×××是SB</div>
-      <input type="text" id="inputText" placeholder="×××" style="font-size:20px;">
-      <button id="updateButton">載入</button>
+      <div id="targetText" style="font-size:25px;">×××是SB</div>
+      <input type="text" id="inputText" placeholder="×××" style="font-size:25px;">
+      <button id="updateButton" style="font-size:25px;">載入</button>
     </name>
     <br><br>
     <sign>GitHub Pages Lucas-0714</sign>
