--- a/sb/index.html
+++ b/sb/index.html
@@ -12,6 +12,14 @@
           font-size: 1.5em;
           margin-bottom: 10px;
         }
+
+        f20 {
+          font-size: 20px;
+        }
+
+        f30 {
+          font-size: 30px;
+        }
      </style>
   </head>
   <body>
@@ -20,7 +28,7 @@
     <br>
     <intro>
       <div class="flex;">
-        <noun>n.</noun>
+        <noun style="font-size:10px;">n.</noun>
         <space>&nbsp;</space>
         <name style="font-size:30px;">Smart Buddy (聰明夥伴)</name>
       </div>
@@ -28,6 +36,7 @@
     <br><br>
     <name>
       <div style="text-align: center; background-color: lightblue;font-size:30px;">SB註冊表</div>
+      <br>
       <div id="targetText" style="font-size:25px;">×××是SB</div>
       <input type="text" id="inputText" placeholder="×××" style="font-size:25px;">
       <button id="updateButton" style="font-size:25px;">載入</button>
