--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     </style>
   </head>
   <body>
-    <a href="https://github.com/" style="color:#000;" font-size="5">GitHub</a>
+    <a href="https://github.com/" style="color:#000;" font-size="5"><strong>GitHub</strong></a>
     <br>
-    <h1 style="color:#32a852;">Lucas-0714</h1>
+    <h1 style="color:#fff;">Lucas-0714</h1>
     <a href="https://github.com/Lucas-0714/" style="background-color:#0ca0eb;color:#fff;">My GitHub Homepage</a>
   </body>
 </html>
