--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <a href="https://github.com/" style="color:#000;font-size:30px;background-color:#fff;"><strong>GitHub</strong></a>
+    <a href="https://github.com/" style="color:#000;font-size:30px;background-color:#fff;"><strong>&nbsp;GitHub&nbsp;</strong></a>
     <br>
     <h1 style="color:#fff;font-size:50px;">Lucas-0714</h1>
     <a href="https://github.com/Lucas-0714/" style="background-color:#0ca0eb;color:#fff;font-size:25px;">My GitHub Homepage</a>
@@ -18,7 +18,7 @@
     <resource>
       <resourec.t style="font-size:30px;">resource</resourec.t>
       <br>
-      <a href="https://lucas-0714.github.io/green-backgroung.png" style="font-size:20px;">background picture</a>
+      <a href="https://lucas-0714.github.io/green-background.png" style="font-size:20px;">background picture</a>
     </resource>
   </body>
 </html>
