--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     </style>
   </head>
   <body>
-    <a href="https://github.com/" style="color:#000;font-size:30px;background-color:#fff;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;</strong></a>
+    <div style="background-color:#fff;">
+      <a href="https://github.com/" style="color:#000;font-size:30px;background-color:#fff;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;</strong></a>
+    </div>
     <br>
     <h1 style="color:#fff;font-size:50px;">Lucas-0714</h1>
     <a href="https://github.com/Lucas-0714/" style="background-color:#0ca0eb;color:#fff;font-size:25px;text-decoration: none;">My GitHub Homepage</a>
