--- a/index.html
+++ b/index.html
@@ -12,12 +12,24 @@
   <body>
     <div style="background-color:#fff;">
       <a href="https://github.com/" style="color:#000;font-size:30px;background-color:#fff;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;</strong></a>
+      <line>&nbsp;|&nbsp;</line>
+      <a href="https://pages.github.com/" style="color:#000;font-size:30px;background-color:#fff;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;Pages&nbsp;</strong></a>
     </div>
+    <header style="align:left;">
+      <nav>
+        <ul>
+          <li><a href="#resource">resource</a></li>
+          <li><a href="#section2">跳到第二部分</a></li>
+          <li><a href="#section3">跳到第三部分</a></li>
+        </ul>
+      </nav>
+      <spaces>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</spaces>
+    </header>
     <br>
     <h1 style="color:#fff;font-size:50px;">Lucas-0714</h1>
     <a href="https://github.com/Lucas-0714/" style="background-color:#0ca0eb;color:#fff;font-size:25px;text-decoration: none;">My GitHub Homepage</a>
     <br><br><br>
-    <resource>
+    <resource id="#resource">
       <resourec.t style="font-size:30px;">resource</resourec.t>
       <br>
       <a href="https://lucas-0714.github.io/green-background.png" style="font-size:20px;">background picture</a>
