--- a/index.html
+++ b/index.html
@@ -15,14 +15,10 @@
       <line>&nbsp;|&nbsp;</line>
       <a href="https://pages.github.com/" style="color:#000;font-size:30px;background-color:#fff;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;Pages&nbsp;</strong></a>
     </div>
-    <header style="align:left;">
-      <nav>
-        <ul>
-          <li><a href="#resource">resource</a></li>
-          <li><a href="#section2">跳到第二部分</a></li>
-          <li><a href="#section3">跳到第三部分</a></li>
-        </ul>
-      </nav>
+    <header style="align:left;" class="flex;">
+      <a href="#resource">resource</a>
+      <a href="#section2">跳到第二部分</a>
+      <a href="#section3">跳到第三部分</a>
       <spaces>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</spaces>
     </header>
     <br>
