--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   </head>
   <body>
     <div style="background-color:#fff;">
-      <a href="https://github.com/" style="color:#000;font-size:30px;background-color:#fff;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;</strong></a>
-      <line>&nbsp;|&nbsp;</line>
-      <a href="https://pages.github.com/" style="color:#000;font-size:30px;background-color:#fff;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;Pages&nbsp;</strong></a>
+      <a href="https://github.com/" style="color:#000;font-size:30px;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;</strong></a>
+      <line style="color:#000;font-size:30px;"><strong>&nbsp;|&nbsp;</strong></line>
+      <a href="https://pages.github.com/" style="color:#000;font-size:30px;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;Pages&nbsp;</strong></a>
     </div>
-    <header style="align:left;" class="flex;">
+    <header style="text-align:left;" class="flex;">
       <a href="#resource">resource</a>
       <a href="#section2">跳到第二部分</a>
       <a href="#section3">跳到第三部分</a>
