--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <line style="color:#000;font-size:30px;"><strong>&nbsp;|&nbsp;</strong></line>
       <a href="https://pages.github.com/" style="color:#000;font-size:30px;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;Pages&nbsp;</strong></a>
     </div>
-    <header style="text-align:left;" class="flex;">
+    <header style="text-align:right;" class="flex;">
       <a href="#resource">resource</a>
       <a href="#section2">跳到第二部分</a>
       <a href="#section3">跳到第三部分</a>
