--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <div style="background-color:#fff;">
+    <div style="">
       <a href="https://github.com/" style="color:#000;font-size:30px;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;</strong></a>
       <line style="color:#000;font-size:30px;"><strong>&nbsp;|&nbsp;</strong></line>
       <a href="https://pages.github.com/" style="color:#000;font-size:30px;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;Pages&nbsp;</strong></a>
