--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     </style>
   </head>
   <body>
-    <div style="">
-      <a href="https://github.com/" style="color:#000;font-size:30px;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;</strong></a>
-      <line style="color:#000;font-size:30px;"><strong>&nbsp;|&nbsp;</strong></line>
-      <a href="https://pages.github.com/" style="color:#000;font-size:30px;text-decoration: none;"><strong>&nbsp;GitHub&nbsp;Pages&nbsp;</strong></a>
-    </div>
+    <github>
+      <img src="https://i.imgur.com/jSli7FX.png" alt="GitHub">
+    </github>
     <header style="text-align:right;" class="flex;">
       <a href="#resource">resource</a>
       <a href="#section2">跳到第二部分</a>
@@ -22,7 +20,7 @@
       <spaces>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</spaces>
     </header>
     <br>
-    <h1 style="color:#fff;font-size:50px;">Lucas-0714</h1>
+    <h1 style="color:#fff;font-size:50px;" id="#home">Lucas-0714</h1>
     <a href="https://github.com/Lucas-0714/" style="background-color:#0ca0eb;color:#fff;font-size:25px;text-decoration: none;">My GitHub Homepage</a>
     <br><br><br>
     <resource id="#resource">
