--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <github>
+    <github href="https://github.com/">
       <img src="https://i.imgur.com/jSli7FX.png" alt="GitHub">
     </github>
     <header style="text-align:right;" class="flex;">
