--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <github href="https://github.com/">
-      <img src="https://i.imgur.com/jSli7FX.png" alt="GitHub">
+      <img src="https://i.imgur.com/jSli7FX.png" alt="GitHub" style="height:35px;">
     </github>
     <header style="text-align:right;" class="flex;">
       <a href="#resource">resource</a>
