--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     </style>
   </head>
   <body>
-    <github href="https://github.com/">
-      <img src="https://i.imgur.com/jSli7FX.png" alt="GitHub" style="height:35px;">
+    <github>
+      <a href="https://github.com/">
+        <img src="https://i.imgur.com/jSli7FX.png" alt="GitHub" style="height:35px;">
+      </a>
     </github>
     <header style="text-align:right;" class="flex;">
       <a href="#resource">resource</a>
