--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
       body {
         background-image: url('https://i.imgur.com/9DXLRfW.jpeg');
       }
+      
+      .sticky-text {
+        position: -webkit-sticky; /* Safari 瀏覽器需要加前綴 */
+        position: sticky;
+        top: 0; /* 當元素滾動到視窗頂部時固定 */
+        background-color: lightyellow; /* 設定背景顏色 */
+        padding: 10px;
+        text-align: right;
+        z-index: 100; /* 確保在內容之上 */
+      }
+      
     </style>
   </head>
   <body>
@@ -16,10 +27,12 @@
       </a>
     </github>
     <header style="text-align:right;" class="flex;">
-      <a href="#resource">resource</a>
-      <a href="#section2">跳到第二部分</a>
-      <a href="#section3">跳到第三部分</a>
-      <spaces>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</spaces>
+      <div class="sticky-text">
+        <a href="#resource">resource</a>
+        <a href="#section2">跳到第二部分</a>
+        <a href="#section3">跳到第三部分</a>
+        <spaces>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</spaces>
+      </div>
     </header>
     <br>
     <h1 style="color:#fff;font-size:50px;" id="#home">Lucas-0714</h1>
