--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <a href="https://github.com/">
         <img src="https://i.imgur.com/jSli7FX.png" alt="GitHub" style="height:35px;">
       </a>
+      <a href="https://pages.github.com/">
+        <img src="https://i.imgur.com/Xl6yKMJ.png" alt="GitHub Pages" style="height:35px;>
+      </a>
     </github>
     <header style="text-align:right;" class="flex;">
       <div class="sticky-text">
