--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="https://i.imgur.com/jSli7FX.png" alt="GitHub" style="height:35px;">
       </a>
       <a href="https://pages.github.com/">
-        <img src="https://i.imgur.com/Xl6yKMJ.png" alt="GitHub Pages" style="height:35px;>
+        <img src="https://i.imgur.com/kB1ost8.png" alt="GitHub Pages" style="height:35px;>
       </a>
     </github>
     <header style="text-align:right;" class="flex;">
