--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   </head>
   <body>
     <github>
-      <a href="https://github.com/">
+      <a href="https://github.com/" style="text-decoration: none;">
         <img src="https://i.imgur.com/jSli7FX.png" alt="GitHub" style="height:35px;">
       </a>
-      <a href="https://pages.github.com/">
+      <a href="https://pages.github.com/" style="text-decoration: none;">
         <img src="https://i.imgur.com/kB1ost8.png" alt="GitHub Pages" style="height:35px;>
       </a>
     </github>
