--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         position: -webkit-sticky; /* Safari 瀏覽器需要加前綴 */
         position: sticky;
         top: 0; /* 當元素滾動到視窗頂部時固定 */
-        background-color: lightyellow; /* 設定背景顏色 */
+        background-image: url('https://i.imgur.com/txbSyJh.jpeg');
         padding: 10px;
         text-align: right;
         z-index: 100; /* 確保在內容之上 */
