--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
       <resourec.t style="font-size:30px;">resource</resourec.t>
       <br>
       <a href="https://lucas-0714.github.io/green-background.png" style="font-size:20px;">background picture</a>
+      <br>
+      <a href="https://lucas-0714.github.io/green-background-strip.png" style="font-size:20px;">background picture</a>
     </resource>
   </body>
 </html>
