--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <br>
       <a href="https://lucas-0714.github.io/green-background.png" style="font-size:20px;">background picture</a>
       <br>
-      <a href="https://lucas-0714.github.io/green-background-strip.png" style="font-size:20px;">background picture</a>
+      <a href="https://lucas-0714.github.io/green-background-strip.png" style="font-size:20px;">background picture (strip)</a>
     </resource>
   </body>
 </html>
