--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="https://i.imgur.com/kB1ost8.png" alt="GitHub Pages" style="height:35px;>
       </a>
     </github>
-    <header style="text-align:right;" class="flex;">
+    <header style="text-align:right;text-decoration: none;font-size:20px;" class="flex;">
       <div class="sticky-text">
         <a href="#resource">resource</a>
         <a href="#section2">跳到第二部分</a>
