--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <img src="https://i.imgur.com/kB1ost8.png" alt="GitHub Pages" style="height:35px;>
       </a>
     </github>
-    <header style="text-align:right;text-decoration: none;font-size:20px;" class="flex;">
+    <header style="text-align:right;" class="flex;">
       <div class="sticky-text">
-        <a href="#resource">resource</a>
-        <a href="#section2">跳到第二部分</a>
-        <a href="#section3">跳到第三部分</a>
+        <a href="#resource" style="text-decoration: none;font-size:20px;color:#000;">resource</a>
+        <a href="#section2" style="text-decoration: none;font-size:20px;color:#000;">跳到第二部分</a>
+        <a href="#section3" style="text-decoration: none;font-size:20px;color:#000;">跳到第三部分</a>
         <spaces>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</spaces>
       </div>
     </header>
