--- a/circle-and-cross/colored/AI/index.html
+++ b/circle-and-cross/colored/AI/index.html
@@ -73,7 +73,7 @@
         <div class="cell" data-index="8"></div>
     </div>
     <div class="controls">
-        <button id="restart-button">重新開始</button>
+        <button id="restart-button" style="color:#a8c9a5;">重新開始</button>
     </div>
 
     <script>
