--- a/circle-and-cross/colored/flip/index.html
+++ b/circle-and-cross/colored/flip/index.html
@@ -61,7 +61,7 @@
         <div class="cell" data-index="8"></div>
     </div>
     <div class="controls">
-        <button id="restart-button" style="color:#a8c9a5;">重新開始</button>
+        <button id="restart-button" style="background-color:#a8c9a5;">重新開始</button>
     </div>
 
     <script>
