--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
     <header style="text-align:right;" class="flex;">
       <div class="sticky-text">
         <a href="#resource" style="text-decoration: none;font-size:20px;color:#000;">resource</a>
-        <a href="#section2" style="text-decoration: none;font-size:20px;color:#000;">跳到第二部分</a>
+        <space>&nbsp;nbsp;</space>
+        <a href="#game" style="text-decoration: none;font-size:20px;color:#000;">game</a>
+        <space>&nbsp;nbsp;</space>
         <a href="#section3" style="text-decoration: none;font-size:20px;color:#000;">跳到第三部分</a>
+        <space>&nbsp;nbsp;</space>
+        <language>
+          <a href="https://lucas-0714.github.io/zh-TW/" style="text-decoration: none;font-size:25px;color:#000;">繁體中文(zh-TW)</a>
+        </language>
         <spaces>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</spaces>
       </div>
     </header>
@@ -44,9 +50,31 @@
     <resource id="#resource">
       <resourec.t style="font-size:30px;">resource</resourec.t>
       <br>
+      <a href="https://github.com/Lucas-0714/Lucas-0714.github.io" style="font-size:20px;">repository</a>
+      <br>
       <a href="https://lucas-0714.github.io/green-background.png" style="font-size:20px;">background picture</a>
       <br>
       <a href="https://lucas-0714.github.io/green-background-strip.png" style="font-size:20px;">background picture (strip)</a>
     </resource>
+    <br><br><br><br><br>
+    <game id="#game">
+      <list>
+        <a href="c&c">circle and cross</a>
+      </list>
+      <circle-and-cross id="#c&c">
+        <strong>Circle and Cross</strong>
+        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;Auto Flip</a>
+        <br>
+        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;No Flip</a>
+        <br>
+        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;Play with AI</a>
+        <br>
+        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;Auto Flip (colored)</a>
+        <br>
+        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;No Flip (colored)</a>
+        <br>
+        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;Play with AI (colored)</a>
+      </circle-and-cross>
+    </game>
   </body>
 </html>
