--- a/zh-TW/index.html
+++ b/zh-TW/index.html
@@ -31,49 +31,50 @@
     </github>
     <header style="text-align:right;" class="flex;">
       <div class="sticky-text">
-        <a href="#resource" style="text-decoration: none;font-size:20px;color:#000;">resource</a>
+        <a href="#resource" style="text-decoration: none;font-size:20px;color:#000;">資源</a>
         <space>&nbsp;nbsp;</space>
-        <a href="#game" style="text-decoration: none;font-size:20px;color:#000;">game</a>
+        <a href="#game" style="text-decoration: none;font-size:20px;color:#000;">遊戲</a>
         <space>&nbsp;nbsp;</space>
         <a href="#section3" style="text-decoration: none;font-size:20px;color:#000;">跳到第三部分</a>
         <space>&nbsp;nbsp;</space>
         <language>
-          <a href="https://lucas-0714.github.io/zh-TW/" style="text-decoration: none;font-size:25px;color:#000;">繁體中文(zh-TW)</a>
+          <a href="https://lucas-0714.github.io/" style="text-decoration: none;font-size:25px;color:#000;">English</a>
         </language>
         <spaces>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</spaces>
       </div>
     </header>
     <br>
     <h1 style="color:#fff;font-size:50px;" id="#home">Lucas-0714</h1>
-    <a href="https://github.com/Lucas-0714/" style="background-color:#0ca0eb;color:#fff;font-size:25px;text-decoration: none;">My GitHub Homepage</a>
+    <a href="https://github.com/Lucas-0714/" style="background-color:#0ca0eb;color:#fff;font-size:25px;text-decoration: none;">我的 GitHub 首頁</a>
     <br><br><br>
     <resource id="#resource">
-      <resourec.t style="font-size:30px;">resource</resourec.t>
+      <resourec.t style="font-size:30px;">資源</resourec.t>
       <br>
-      <a href="https://github.com/Lucas-0714/Lucas-0714.github.io" style="font-size:20px;">repository</a>
+      <a href="https://github.com/Lucas-0714/Lucas-0714.github.io" style="font-size:20px;">原始碼</a>
       <br>
-      <a href="https://lucas-0714.github.io/green-background.png" style="font-size:20px;">background picture</a>
+      <a href="https://lucas-0714.github.io/green-background.png" style="font-size:20px;">背景圖片</a>
       <br>
-      <a href="https://lucas-0714.github.io/green-background-strip.png" style="font-size:20px;">background picture (strip)</a>
+      <a href="https://lucas-0714.github.io/green-background-strip.png" style="font-size:20px;">背景圖片 (長條狀)</a>
     </resource>
     <br><br><br><br><br>
     <game id="#game">
       <list>
-        <a href="c&c">circle and cross</a>
+        <a href="c&c">圈圈叉叉</a>
       </list>
+      <br><br><br>
       <circle-and-cross id="#c&c">
-        <strong>Circle and Cross</strong>
-        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;Auto Flip</a>
+        <strong>圈圈叉叉</strong>
+        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;自動翻轉</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;No Flip</a>
+        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;方向鎖定</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;Play with AI</a>
+        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;AI 對戰</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;Auto Flip (colored)</a>
+        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;自動翻轉 (彩色)</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;No Flip (colored)</a>
+        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;方向鎖定 (彩色)</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;Play with AI (colored)</a>
+        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;AI 對戰 (彩色)</a>
       </circle-and-cross>
     </game>
   </body>
