--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <header style="text-align:right;" class="flex;">
       <div class="sticky-text">
         <a href="#resource" style="text-decoration: none;font-size:20px;color:#000;">resource</a>
-        <space>&nbsp;nbsp;</space>
+        <space>&nbsp;&nbsp;</space>
         <a href="#game" style="text-decoration: none;font-size:20px;color:#000;">game</a>
-        <space>&nbsp;nbsp;</space>
+        <space>&nbsp;&nbsp;</space>
         <a href="#section3" style="text-decoration: none;font-size:20px;color:#000;">跳到第三部分</a>
-        <space>&nbsp;nbsp;</space>
+        <space>&nbsp;&nbsp;</space>
         <language>
           <a href="https://lucas-0714.github.io/zh-TW/" style="text-decoration: none;font-size:25px;color:#000;">繁體中文(zh-TW)</a>
         </language>
@@ -58,23 +58,31 @@
     </resource>
     <br><br><br><br><br>
     <game id="#game">
+      <game.t style="font-size:25px;">Game</game.t>
       <list>
         <a href="c&c">circle and cross</a>
       </list>
       <br><br><br>
       <circle-and-cross id="#c&c">
         <strong>Circle and Cross</strong>
-        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;Auto Flip</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;No Flip</a>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">Auto Flip</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;Play with AI</a>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">No Flip</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;Auto Flip (colored)</a>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">Play with AI</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;No Flip (colored)</a>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">Auto Flip (colored)</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;Play with AI (colored)</a>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">No Flip (colored)</a>
+        <br>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">Play with AI (colored)</a>
       </circle-and-cross>
     </game>
   </body>
