--- a/zh-TW/index.html
+++ b/zh-TW/index.html
@@ -58,24 +58,31 @@
     </resource>
     <br><br><br><br><br>
     <game id="#game">
+      <game.t style="font-size:25px;">遊戲</game.t>
       <list>
         <a href="c&c">圈圈叉叉</a>
       </list>
       <br><br><br>
       <circle-and-cross id="#c&c">
         <strong>圈圈叉叉</strong>
-        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;自動翻轉</a>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">自動翻轉</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;方向鎖定</a>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">方向鎖定</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;AI 對戰</a>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">AI 對戰</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;自動翻轉 (彩色)</a>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">自動翻轉 (彩色)</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;方向鎖定 (彩色)</a>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">方向鎖定 (彩色)</a>
         <br>
-        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">&nbsp;&nbsp;&nbsp;&nbsp;AI 對戰 (彩色)</a>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">AI 對戰 (彩色)</a>
       </circle-and-cross>
     </game>
   </body>
-      </html>
+</html>
