--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
         <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">Play with AI</a>
         <br>
         <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
-        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">Auto Flip (colored)</a>
+        <a href="https://lucas-0714.github.io/circle-and-cross/colored/flip" style="font-size:20px;">Auto Flip (colored)</a>
         <br>
         <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
-        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">No Flip (colored)</a>
+        <a href="https://lucas-0714.github.io/circle-and-cross/colored/no-flip" style="font-size:20px;">No Flip (colored)</a>
         <br>
         <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
-        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">Play with AI (colored)</a>
+        <a href="https://lucas-0714.github.io/circle-and-cross/colored/AI" style="font-size:20px;">Play with AI (colored)</a>
       </circle-and-cross>
     </game>
   </body>
