--- a/zh-TW/index.html
+++ b/zh-TW/index.html
@@ -75,13 +75,13 @@
         <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">AI 對戰</a>
         <br>
         <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
-        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">自動翻轉 (彩色)</a>
+        <a href="https://lucas-0714.github.io/circle-and-cross/colored/flip" style="font-size:20px;">自動翻轉 (彩色)</a>
         <br>
         <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
-        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">方向鎖定 (彩色)</a>
+        <a href="https://lucas-0714.github.io/circle-and-cross/colored/no-flip" style="font-size:20px;">方向鎖定 (彩色)</a>
         <br>
         <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
-        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">AI 對戰 (彩色)</a>
+        <a href="https://lucas-0714.github.io/circle-and-cross/colored/AI" style="font-size:20px;">AI 對戰 (彩色)</a>
       </circle-and-cross>
     </game>
   </body>
