--- a/zh-TW/index.html
+++ b/zh-TW/index.html
@@ -32,11 +32,11 @@
     <header style="text-align:right;" class="flex;">
       <div class="sticky-text">
         <a href="#resource" style="text-decoration: none;font-size:20px;color:#000;">資源</a>
-        <space>&nbsp;nbsp;</space>
+        <space>&nbsp;&nbsp;</space>
         <a href="#game" style="text-decoration: none;font-size:20px;color:#000;">遊戲</a>
-        <space>&nbsp;nbsp;</space>
+        <space>&nbsp;&nbsp;</space>
         <a href="#section3" style="text-decoration: none;font-size:20px;color:#000;">跳到第三部分</a>
-        <space>&nbsp;nbsp;</space>
+        <space>&nbsp;&nbsp;</space>
         <language>
           <a href="https://lucas-0714.github.io/" style="text-decoration: none;font-size:25px;color:#000;">English</a>
         </language>
