--- a/sb/index.html
+++ b/sb/index.html
@@ -37,8 +37,8 @@
     <name>
       <div style="text-align: center; background-color: lightblue;font-size:30px;">SB註冊表</div>
       <br>
-      <div id="targetText" style="font-size:25px;">×××是SB</div>
-      <input type="text" id="inputText" placeholder="×××" style="font-size:25px;">
+      <div id="targetText" style="font-size:25px;">我是SB</div>
+      <input type="text" id="inputText" placeholder="請輸入文字" style="font-size:25px;">
       <button id="updateButton" style="font-size:25px;">載入</button>
     </name>
     <br><br>
