--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <game.t style="font-size:25px;">Game</game.t>
       <br>
       <list>
-        <a href="c&c">circle and cross</a>
+        <a href="#c&c">circle and cross</a>
       </list>
       <br><br><br>
       <circle-and-cross id="#c&c">
