--- a/zh-TW/index.html
+++ b/zh-TW/index.html
@@ -38,7 +38,7 @@
         <a href="#section3" style="text-decoration: none;font-size:20px;color:#000;">跳到第三部分</a>
         <space>&nbsp;&nbsp;</space>
         <language>
-          <a href="https://lucas-0714.github.io/" style="text-decoration: none;font-size:25px;color:#000;">English</a>
+          <a href="https://lucas-0714.github.io/" style="text-decoration: none;font-size:20px;color:#000;">English</a>
         </language>
         <spaces>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</spaces>
       </div>
@@ -61,7 +61,7 @@
       <game.t style="font-size:25px;">遊戲</game.t>
       <br>
       <list>
-        <a href="c&c">圈圈叉叉</a>
+        <a href="#c&c">圈圈叉叉</a>
       </list>
       <br><br><br>
       <circle-and-cross id="#c&c">
