--- a/sb/index.html
+++ b/sb/index.html
@@ -42,7 +42,7 @@
       <button id="updateButton" style="font-size:25px;">載入</button>
     </name>
     <br><br>
-    <sign>GitHub Pages Lucas-0714</sign>
+    <sign>©︎ 2025 Lucas-0714 All right Reserved.</sign>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
       const targetTextElement = document.getElementById('targetText');
