--- a/test/index.html
+++ b/test/index.html
@@ -1,1 +1,90 @@
+<DOCTYPE html>
 
+<html lang="zh-TW">
+  <head>
+    <title>Lucas-0714 | GitHub</title>
+    <style>
+      body {
+        background-image: url('https://i.imgur.com/9DXLRfW.jpeg');
+      }
+      
+      .sticky-text {
+        position: -webkit-sticky; /* Safari 瀏覽器需要加前綴 */
+        position: sticky;
+        top: 0; /* 當元素滾動到視窗頂部時固定 */
+        background-image: url('https://i.imgur.com/34wXOw1.jpeg');
+        padding: 10px;
+        text-align: right;
+        z-index: 100; /* 確保在內容之上 */
+      }
+      
+    </style>
+  </head>
+  <body>
+    <github>
+      <a href="https://github.com/" style="text-decoration: none;">
+        <img src="https://i.imgur.com/jSli7FX.png" alt="GitHub" style="height:35px;">
+      </a>
+      <a href="https://pages.github.com/" style="text-decoration: none;">
+        <img src="https://i.imgur.com/kB1ost8.png" alt="GitHub Pages" style="height:35px;>
+      </a>
+    </github>
+    <header style="text-align:right;" class="flex;">
+      <div class="sticky-text">
+        <a href="#resource" style="text-decoration: none;font-size:20px;color:#000;">resource</a>
+        <space>&nbsp;&nbsp;</space>
+        <a href="#game" style="text-decoration: none;font-size:20px;color:#000;">game</a>
+        <space>&nbsp;&nbsp;</space>
+        <a href="#section3" style="text-decoration: none;font-size:20px;color:#000;">跳到第三部分</a>
+        <space>&nbsp;&nbsp;</space>
+        <language>
+          <a href="https://lucas-0714.github.io/zh-TW/" style="text-decoration: none;font-size:20px;color:#000;">繁體中文(zh-TW)</a>
+        </language>
+        <spaces>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</spaces>
+      </div>
+    </header>
+    <br>
+    <h1 style="color:#fff;font-size:50px;" id="#home">Lucas-0714</h1>
+    <a href="https://github.com/Lucas-0714/" style="background-color:#0ca0eb;color:#fff;font-size:25px;text-decoration: none;">My GitHub Homepage</a>
+    <br><br><br>
+    <resource id="#resource">
+      <resourec.t style="font-size:30px;">resource</resourec.t>
+      <br>
+      <a href="https://github.com/Lucas-0714/Lucas-0714.github.io" style="font-size:20px;">repository</a>
+      <br>
+      <a href="https://lucas-0714.github.io/green-background.png" style="font-size:20px;">background picture</a>
+      <br>
+      <a href="https://lucas-0714.github.io/green-background-strip.png" style="font-size:20px;">background picture (strip)</a>
+    </resource>
+    <br><br><br><br><br>
+    <game id="#game">
+      <game.t style="font-size:25px;">Game</game.t>
+      <br>
+      <list>
+        <a href="#c&c">circle and cross</a>
+      </list>
+      <br><br><br>
+      <circle-and-cross id="#c&c">
+        <strong>Circle and Cross</strong>
+        <br>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/flip" style="font-size:20px;">Auto Flip</a>
+        <br>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/no-flip" style="font-size:20px;">No Flip</a>
+        <br>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/AI" style="font-size:20px;">Play with AI</a>
+        <br>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/colored/flip" style="font-size:20px;">Auto Flip (colored)</a>
+        <br>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/colored/no-flip" style="font-size:20px;">No Flip (colored)</a>
+        <br>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/circle-and-cross/colored/AI" style="font-size:20px;">Play with AI (colored)</a>
+      </circle-and-cross>
+    </game>
+  </body>
+      </html>
