--- a/test/index.html
+++ b/test/index.html
@@ -40,7 +40,7 @@
         <language>
           <a href="https://lucas-0714.github.io/zh-TW/" style="text-decoration: none;font-size:1vw;color:#000;">繁體中文(zh-TW)</a>
         </language>
-        <spaces>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</spaces>
+        <spaces>&nbsp;&nbsp;&nbsp;</spaces>
       </div>
     </header>
     <br>
