--- a/test/index.html
+++ b/test/index.html
@@ -40,6 +40,13 @@
         <language>
           <a href="https://lucas-0714.github.io/zh-TW/" style="text-decoration: none;font-size:1vw;color:#000;">繁體中文(zh-TW)</a>
         </language>
+        <space>&nbsp;&nbsp;</space>
+        <div style="text-align:center;" class="flex;">
+          <a href="https://lucas-0714.github.io/login/">
+            <img src="https://i.imgur.com/R5QkQDk.png" alt="login">
+          </a>
+          <t style="fonr-size:0.7vw;">Log in</t>
+        </div>
         <spaces>&nbsp;&nbsp;&nbsp;</spaces>
       </div>
     </header>
