--- a/test/index.html
+++ b/test/index.html
@@ -41,7 +41,7 @@
           <a href="https://lucas-0714.github.io/zh-TW/" style="text-decoration: none;font-size:1vw;color:#000;">繁體中文(zh-TW)</a>
         </language>
         <space>&nbsp;&nbsp;</space>
-        <div style="text-align:center;" class="flex;">
+        <div class="flex;" style="text-decoration: none;">
           <a href="https://lucas-0714.github.io/login/">
             <img src="https://i.imgur.com/R5QkQDk.png" alt="login">
           </a>
