--- a/test/index.html
+++ b/test/index.html
@@ -26,7 +26,7 @@
         <img src="https://i.imgur.com/jSli7FX.png" alt="GitHub" style="height:35px;">
       </a>
       <a href="https://pages.github.com/" style="text-decoration: none;">
-        <img src="https://i.imgur.com/kB1ost8.png" alt="GitHub Pages" style="height:35px;>
+        <img src="https://i.imgur.com/kB1ost8.png" alt="GitHub Pages" style="height:35px;">
       </a>
     </github>
     <header style="text-align:right;font-size:1vw" class="flex;">
@@ -41,12 +41,12 @@
           <a href="https://lucas-0714.github.io/zh-TW/" style="text-decoration: none;font-size:1vw;color:#000;">繁體中文(zh-TW)</a>
         </language>
         <space>&nbsp;&nbsp;</space>
-        <div class="flex;" style="text-decoration: none;">
+        <div style="text-decoration: none;">
           <a href="https://lucas-0714.github.io/login/">
             <img src="https://i.imgur.com/R5QkQDk.png" alt="login">
           </a>
           <t style="fonr-size:0.7vw;">Log in</t>
-        </div>
+        <div>
         <spaces>&nbsp;&nbsp;&nbsp;</spaces>
       </div>
     </header>
