--- a/test/index.html
+++ b/test/index.html
@@ -29,7 +29,7 @@
         <img src="https://i.imgur.com/kB1ost8.png" alt="GitHub Pages" style="height:35px;">
       </a>
     </github>
-    <header style="text-align:right;font-size:1vw" class="flex;">
+    <header style="text-align:right;font-size:1vw;text-decoration: none;" class="flex;">
       <div class="sticky-text">
         <a href="#resource" style="text-decoration: none;font-size:1vw;color:#000;">resource</a>
         <space>&nbsp;&nbsp;</space>
@@ -41,12 +41,9 @@
           <a href="https://lucas-0714.github.io/zh-TW/" style="text-decoration: none;font-size:1vw;color:#000;">繁體中文(zh-TW)</a>
         </language>
         <space>&nbsp;&nbsp;</space>
-        <div style="text-decoration: none;">
-          <a href="https://lucas-0714.github.io/login/">
-            <img src="https://i.imgur.com/R5QkQDk.png" alt="login">
-          </a>
-          <t style="fonr-size:0.7vw;">Log in</t>
-        <div>
+        <a href="https://lucas-0714.github.io/login/">
+          <img src="https://i.imgur.com/R5QkQDk.png" alt="login">
+        </a>
         <spaces>&nbsp;&nbsp;&nbsp;</spaces>
       </div>
     </header>
