--- a/test/index.html
+++ b/test/index.html
@@ -42,7 +42,7 @@
         </language>
         <space>&nbsp;&nbsp;</space>
         <a href="https://lucas-0714.github.io/login/">
-          <img src="https://i.imgur.com/R5QkQDk.png" alt="login">
+          <img src="https://i.imgur.com/R5QkQDk.png" alt="login" style="width:1vw">
         </a>
         <spaces>&nbsp;&nbsp;&nbsp;</spaces>
       </div>
