--- a/login/dashboard.html
+++ b/login/dashboard.html
@@ -22,7 +22,7 @@
 
         function logout() {
             localStorage.removeItem('username');
-            window.location.href = 'login.html';
+            window.location.href = '';
         }
     </script>
 </body>
