--- a/login/dashboard.html
+++ b/login/dashboard.html
@@ -17,7 +17,7 @@
             usernameDisplay.textContent = username;
         } else {
             // 如果沒有登入資訊，導回登入頁面
-            window.location.href = 'login.html';
+            window.location.href = '';
         }
 
         function logout() {
