--- a/login/dashboard.html
+++ b/login/dashboard.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>儀表板</title>
+    <style>
+        body {
+            background-image: url('')
+        }
+    </style>
 </head>
 <body>
     <h1>歡迎，<span id="usernameDisplay"></span>！</h1>
