--- a/login/dashboard.html
+++ b/login/dashboard.html
@@ -6,7 +6,7 @@
     <title>儀表板</title>
     <style>
         body {
-            background-image: url('')
+            background-image: url('https://i.imgur.com/9DXLRfW.jpeg')
         }
     </style>
 </head>
