--- a/zh-TW/index.html
+++ b/zh-TW/index.html
@@ -26,21 +26,25 @@
         <img src="https://i.imgur.com/jSli7FX.png" alt="GitHub" style="height:35px;">
       </a>
       <a href="https://pages.github.com/" style="text-decoration: none;">
-        <img src="https://i.imgur.com/kB1ost8.png" alt="GitHub Pages" style="height:35px;>
+        <img src="https://i.imgur.com/kB1ost8.png" alt="GitHub Pages" style="height:35px;">
       </a>
     </github>
-    <header style="text-align:right;" class="flex;">
+    <header style="text-align:right;font-size:1vw;text-decoration: none;" class="flex;">
       <div class="sticky-text">
-        <a href="#resource" style="text-decoration: none;font-size:20px;color:#000;">資源</a>
+        <a href="#resource" style="text-decoration: none;font-size:1vw;color:#000;">資源</a>
         <space>&nbsp;&nbsp;</space>
-        <a href="#game" style="text-decoration: none;font-size:20px;color:#000;">遊戲</a>
+        <a href="#game" style="text-decoration: none;font-size:1vw;color:#000;">遊戲</a>
         <space>&nbsp;&nbsp;</space>
-        <a href="#section3" style="text-decoration: none;font-size:20px;color:#000;">跳到第三部分</a>
+        <a href="#section3" style="text-decoration: none;font-size:1vw;color:#000;">跳到第三部分</a>
         <space>&nbsp;&nbsp;</space>
         <language>
-          <a href="https://lucas-0714.github.io/" style="text-decoration: none;font-size:20px;color:#000;">English</a>
+          <a href="https://lucas-0714.github.io/" style="text-decoration: none;font-size:1vw;color:#000;">English</a>
         </language>
-        <spaces>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</spaces>
+        <space>&nbsp;&nbsp;</space>
+        <a href="https://lucas-0714.github.io/login/login.html" style="text-decoration:none;">
+          <img src="https://i.imgur.com/R5QkQDk.png" alt="login" style="width:1vw">
+        </a>
+        <spaces>&nbsp;&nbsp;&nbsp;</spaces>
       </div>
     </header>
     <br>
