--- a/test/index.html
+++ b/test/index.html
@@ -29,7 +29,7 @@
         <img src="https://i.imgur.com/kB1ost8.png" alt="GitHub Pages" style="height:35px;">
       </a>
     </github>
-    <header style="text-align:right;font-size:1vw;text-decoration: none;" class="flex;">
+    <header style="text-align:right;font-size:1vw;text-decoration: none;" class="flex; sticky-text">
       <div class="sticky-text">
         <a href="#resource" style="text-decoration: none;font-size:1vw;color:#000;">resource</a>
         <space>&nbsp;&nbsp;</space>
