--- a/sandbox-game/index.html
+++ b/sandbox-game/index.html
@@ -13,7 +13,7 @@
 <canvas id="gameCanvas"></canvas>
 <div id="instructions">在畫布上左右滑動以旋轉立方體</div>
 
-<script src="https://gist.github.com/pbfy0/3a1717978fc68adaa7a878a2089db731.js"></script>
+<script src="gl-matrix-min.js"></script>
 <script>
   const canvas = document.getElementById('gameCanvas');
   const renderer = canvas.getContext('webgl');
