--- a/sandbox-game/index.html
+++ b/sandbox-game/index.html
@@ -19,8 +19,10 @@
   const renderer = canvas.getContext('webgl');
 
   if (!renderer) {
+    console.log('WebGL context is:', renderer);
     alert('您的瀏覽器不支持 WebGL');
   } else {
+    console.log('WebGL context is:', renderer);
     // 設置畫布大小
     canvas.width = window.innerWidth * 0.8;
     canvas.height = window.innerHeight * 0.8;
