--- a/python-project/m1/index.html
+++ b/python-project/m1/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css&quot; />
+    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css&quot;">
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script&gt;
   </head>
   <body>
