--- a/python-project/m1/index.html
+++ b/python-project/m1/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css&quot;">
-    <script defer src="https://pyscript.net/alpha/pyscript.js"></script&gt;
+    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
+    <script defer src="https://pyscript.net/latest/pyscript.js"></script>
   </head>
   <body>
     <py-script>
