--- a/game/maze/index.html
+++ b/game/maze/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>視覺化迷宮遊戲</title>
+    <title>行動版視覺化迷宮遊戲</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <h1>迷宮遊戲</h1>
     <div id="maze-container">
         </div>
     <div id="message"></div>
+    <div id="controls">
+        <button id="upBtn">↑</button>
+        <div>
+            <button id="leftBtn">←</button>
+            <button id="rightBtn">→</button>
+        </div>
+        <button id="downBtn">↓</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
