--- a/game/maze/index.html
+++ b/game/maze/index.html
@@ -14,6 +14,7 @@
         <button id="upBtn">↑</button>
         <div>
             <button id="leftBtn">←</button>
+            <button >　</button>
             <button id="rightBtn">→</button>
         </div>
         <button id="downBtn">↓</button>
