--- a/game/sokoban/index.html
+++ b/game/sokoban/index.html
@@ -12,8 +12,11 @@
     <div id="message"></div>
     <div id="controls">
         <button id="upBtn">↑</button>
-        <button id="downBtn">↓</button>
-        <button id="leftBtn">←</button>
+        <div class="flex;">
+            <button id="downBtn">↓</button>
+            <button>　</button>
+            <button id="leftBtn">←</button>
+        </div>
         <button id="rightBtn">→</button>
     </div>
     <script src="script.js"></script>
