--- a/game/maze/index.html
+++ b/game/maze/index.html
@@ -13,6 +13,9 @@
             <option value="map1">簡單地圖</option>
             <option value="map2">中等地圖</option>
             <option value="map3">困難地圖</option>
+            <option value="m1">地圖1</option>
+            <option value="m2">地圖2</option>
+            <option value="m3">地圖3</option>
         </select>
         <button id="start-button">開始遊戲</button>
     </div>
