--- a/game/landmine/index.html
+++ b/game/landmine/index.html
@@ -9,11 +9,11 @@
     <h1>踩地雷</h1>
     <div class="settings">
         <label for="rows">行數:</label>
-        <input type="number" id="rows" value="10" min="5">
+        <input type="number" id="rows" value="10" min="5" style="width=4vw">
         <label for="cols">列數:</label>
-        <input type="number" id="cols" value="10" min="5">
+        <input type="number" id="cols" value="10" min="5" style="width=4vw">
         <label for="mines">地雷數:</label>
-        <input type="number" id="mines" value="10" min="1">
+        <input type="number" id="mines" value="10" min="1" style="width=4vw">
         <button id="new-game">開始新遊戲</button>
     </div>
     <div id="grid-container">
