--- a/game/maze/index.html
+++ b/game/maze/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>行動版視覺化迷宮遊戲</title>
+    <title>迷宮遊戲</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
