--- a/game/sokoban/index.html
+++ b/game/sokoban/index.html
@@ -10,14 +10,20 @@
     <div id="game-container">
         </div>
     <div id="message"></div>
-    <div id="controls">
+    <div id="controls"class="flex;">
         <button id="upBtn">↑</button>
+        <br>
         <div class="flex;">
             <button id="leftBtn">←</button>
             <button>　</button>
             <button id="rightBtn">→</button>
+            <space>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</space>
+            <button id="loadBtn">載入遊戲</button>
         </div>
+        <br>
         <button id="downBtn">↓</button>
+        <space>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</space>
+        <button id="restartBtn">重新開始</button>
     </div>
     <script src="script.js"></script>
 </body>
