--- a/game/sokoban/index.html
+++ b/game/sokoban/index.html
@@ -7,10 +7,9 @@
 </head>
 <body>
     <h1>推箱子</h1>
-    <div id="game-container">
-        </div>
+    <div id="game-container"></div>
     <div id="message"></div>
-    <div id="controls"class="flex;">
+    <div id="controls">
         <button id="upBtn">↑</button>
         <br>
         <div class="flex;">
