--- a/game/sokoban/index.html
+++ b/game/sokoban/index.html
@@ -21,6 +21,8 @@
         <button id="loadBtn">載入遊戲</button>
         <button id="restartBtn">重新開始</button>
     </div>
+    <audio id="winSound" src="win.wav" preload="auto"></audio>
+    <audio id="deadlockSound" src="deadlock.wav" preload="auto"></audio>
     <script src="script.js"></script>
 </body>
 </html>
