--- a/game/sokoban/index.html
+++ b/game/sokoban/index.html
@@ -18,6 +18,7 @@
         </div>
         <button id="downBtn">↓</button>
         <br>
+        <button id="saveBtn">儲存遊戲</button>
         <button id="loadBtn">載入遊戲</button>
         <button id="restartBtn">重新開始</button>
     </div>
