--- a/game/sokoban/index.html
+++ b/game/sokoban/index.html
@@ -23,6 +23,7 @@
         <button id="restartBtn">重新開始</button>
     </div>
     <audio id="winSound" src="win.wav" preload="auto"></audio>
+    <audio id="bgSound" src="bg.wav" preload="auto"></audio>
     <audio id="deadlockSound" src="deadlock.wav" preload="auto"></audio>
     <script src="script.js"></script>
 </body>
