--- a/game/sokoban/index.html
+++ b/game/sokoban/index.html
@@ -11,7 +11,7 @@
     <div id="start-menu">
         <h2>歡迎來到推箱子！</h2>
         <button id="startGameBtn">開始遊戲</button>
-        <button id="loadBtn">載入遊戲</button>
+        <button id="loadGameBtn">載入遊戲</button>
     </div>
 
     <div id="game-wrapper" style="display: none;">
@@ -27,6 +27,7 @@
             <button id="downBtn">↓</button>
             <br>
             <button id="saveBtn">儲存遊戲</button>
+            <button id="loadBtn">載入遊戲</button>
             <button id="restartBtn">重新開始</button>
         </div>
     </div>
