--- a/game/click/index.html
+++ b/game/click/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>點擊計數器</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 </head>
 <body>
     <h1>點擊計數器</h1>
