--- a/game/114514/index.html
+++ b/game/114514/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+  <title>網頁跳轉中...</title>
 </head>
+<body>
+  <p>如果沒有自動跳轉，請點擊這裡：<a href="https://lucas-0714.github.io/game/114514/intro.html">前往另一個網頁</a></p>
+  
+  <script>
+    // 跳轉網址
+    window.location.href = "https://lucas-0714.github.io/game/114514/114514.html";
+  </script>
+</body>
 </html>
