--- a/game/114514/index.html
+++ b/game/114514/index.html
@@ -7,8 +7,11 @@
   <p>如果沒有自動跳轉，請點擊這裡：<a href="https://lucas-0714.github.io/game/114514/intro.html">前往另一個網頁</a></p>
   
   <script>
-    // 跳轉網址
-    window.location.href = "https://lucas-0714.github.io/game/114514/114514.html";
+    setTimeout(function() {
+      console.log("等待了 2 秒");
+      // 跳轉網址
+      window.location.href = "https://lucas-0714.github.io/game/114514/114514.html";
+    }, 2000); // 2000 毫秒 = 2 秒
   </script>
 </body>
 </html>
