--- a/project/e-learning/math/trigonometric/images/index.html
+++ b/project/e-learning/math/trigonometric/images/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>圖片切換</title>
+    <title>三角函數圖片</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <img id="myImage" src="image1.jpg" alt="圖片">
+        <img id="myImage" src="sin.jpg" alt="圖片">
         <div class="buttons">
             <button id="prevBtn">上一張</button>
             <button id="nextBtn">下一張</button>
