--- a/project/e-learning/math/trigonometric/images/index.html
+++ b/project/e-learning/math/trigonometric/images/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img id="myImage" src="sin.jpg" alt="圖片">
+        <img id="myImage" src="sine.jpg" alt="圖片">
         <div class="buttons">
             <button id="prevBtn">上一張</button>
             <button id="nextBtn">下一張</button>
