--- a/game/sokoban-locked/index.html
+++ b/game/sokoban-locked/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>推箱子</title>
     <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
     <h1>推箱子</h1>
