--- a/db/trigonometric/index.html
+++ b/db/trigonometric/index.html
@@ -24,7 +24,9 @@
 <body>
   <b class="center">Trigonometric - db</b>
   <cell>
-    <titleT>sin->cos->tan->csc->sec->cot ?</titleT>
+    <titleT>sin->cos->tan-><ins>csc</ins>->sec-><ins>cot</ins> ?</titleT>
+    <br><br>
+    <a href="https://unacademy.com/content/cbse-class-11/study-material/mathematics/basics-of-trigonometric-functions/">source</a>
   </cell>
 </body>
 </html>
