--- a/db/trigonometric/index.html
+++ b/db/trigonometric/index.html
@@ -12,12 +12,16 @@
       text-align: left;
       display: flex;
       border: 1px solid #000;
-      padding: 10px;
+      padding: 100px;
       color: #000;
     }
 
     cell titleT {
       font-size: 25px;
+    }
+
+    cell img {
+      width: 75px;
     }
   </style>
 </head>
@@ -27,6 +31,7 @@
     <titleT>sin->cos->tan-><ins>csc</ins>->sec-><ins>cot</ins> ?</titleT>
     <br><br>
     <a href="https://unacademy.com/content/cbse-class-11/study-material/mathematics/basics-of-trigonometric-functions/">source</a>
+    <img src="poi.png">
   </cell>
 </body>
 </html>
