--- a/db/trigonometric/index.html
+++ b/db/trigonometric/index.html
@@ -8,29 +8,33 @@
     }
 
     cell {
-      font-size: 20px;
+      font-size: 25px;
       text-align: left;
-      display: flex;
       border: 1px solid #000;
-      padding: 100px;
+      padding: 10px;
       color: #000;
     }
 
     cell titleT {
-      font-size: 25px;
+      font-size: 30px;
     }
 
     cell img {
-      width: 75px;
+      width: 50vw;
+    }
+
+    flex {
+      display: flex;
     }
   </style>
 </head>
 <body>
-  <b class="center">Trigonometric - db</b>
+  <b class="center" style="font-size: 45px;">Trigonometric - db</b>
   <cell>
     <titleT>sin->cos->tan-><ins>csc</ins>->sec-><ins>cot</ins> ?</titleT>
     <br><br>
     <a href="https://unacademy.com/content/cbse-class-11/study-material/mathematics/basics-of-trigonometric-functions/">source</a>
+    <br>
     <img src="poi.png">
   </cell>
 </body>
