--- a/db/trigonometric/index.html
+++ b/db/trigonometric/index.html
@@ -11,7 +11,6 @@
       font-size: 25px;
       text-align: left;
       border: 1px solid #000;
-      padding: 10px;
       color: #000;
     }
 
@@ -26,6 +25,10 @@
     flex {
       display: flex;
     }
+
+    space {
+      matrix-buttom: 50px;
+    }
   </style>
 </head>
 <body>
@@ -38,5 +41,9 @@
     <br>
     <img src="poi.png">
   </cell>
+  <space></space><space></space><space></space>
+  <resource>
+    <a style="font-size: 25px;" href="https://github.com/Lucas-0714/Lucas-0714.github.io/blob/main/db/trigonometric/index.html">Resource On GitHub</a>
+  </resource>
 </body>
 </html>
