--- a/db/trigonometric/index.html
+++ b/db/trigonometric/index.html
@@ -11,6 +11,7 @@
       font-size: 25px;
       text-align: left;
       border: 1px solid #000;
+      padding: 200px;
       color: #000;
     }
 
