--- a/db/trigonometric/index.html
+++ b/db/trigonometric/index.html
@@ -11,7 +11,7 @@
       font-size: 25px;
       text-align: left;
       border: 1px solid #000;
-      padding: 200px;
+      padding: 40vh;
       color: #000;
     }
 
@@ -42,7 +42,7 @@
     <br>
     <img src="poi.png">
   </cell>
-  <space></space><space></space><space></space>
+  <br><space></space><br><space></space><br><space></space><br>
   <resource>
     <a style="font-size: 25px;" href="https://github.com/Lucas-0714/Lucas-0714.github.io/blob/main/db/trigonometric/index.html">Resource On GitHub</a>
   </resource>
