--- a/project/ticket/more/index.html
+++ b/project/ticket/more/index.html
@@ -77,9 +77,16 @@
     <div class="block">
       <h2>護照</h2>
       <div class="id">ID: otter-zoo-combo</div>
-      <img src="img/otter-zoo-combo.png">
+      <img src="img/passport.png">
       <br>
       <a href="mailto:lucaswang0714@gmail.com?subject=reserve-ticket&body=%e5%a7%93%e5%90%8d%ef%bc%88%e4%b8%ad%e3%80%81%e8%8b%b1%ef%bc%89%ef%bc%9a%0d%0a%e8%ba%ab%e5%88%86%e8%ad%89%e5%ad%97%e8%99%9f%ef%bc%9a%0d%0a%e8%b3%bc%e8%b2%b7%e7%89%a9%e5%93%81%e5%90%8d%e7%a8%b1%ef%bc%9apassport%e7%85%a7%e7%89%87%ef%bc%9a%0d%0a%0d%0a%e4%bb%a5%e4%b8%8b%e5%8b%bf%e5%8b%95%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%0d%0a%0d%0aMail%20from%20Documents%20Link%0d%0ato%20ticket.com(lucaswang0714)%0d%0awill%20return%20by%20deadline%202%20days%0d%0a%0d%0aHyperNumber%3a%20HPN_mailbydoc_00_0xF2-url-017259/" class="button">立刻購買</a>
+    </div>
+    <div class="block">
+      <h2>JR路線圖</h2>
+      <div class="id">ID: jr-route</div>
+      <img src="img/jr-route.png">
+      <br>
+      <a href="mailto:lucaswang0714@gmail.com?subject=reserve-ticket&body=%e5%a7%93%e5%90%8d%ef%bc%88%e4%b8%ad%e3%80%81%e8%8b%b1%ef%bc%89%ef%bc%9a%0d%0a%e8%ba%ab%e5%88%86%e8%ad%89%e5%ad%97%e8%99%9f%ef%bc%9a%0d%0a%e8%b3%bc%e8%b2%b7%e7%89%a9%e5%93%81%e5%90%8d%e7%a8%b1%ef%bc%9ajr-route%e7%85%a7%e7%89%87%ef%bc%9a%0d%0a%0d%0a%e4%bb%a5%e4%b8%8b%e5%8b%bf%e5%8b%95%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%e2%80%94%20%0d%0a%0d%0aMail%20from%20Documents%20Link%0d%0ato%20ticket.com(lucaswang0714)%0d%0awill%20return%20by%20deadline%202%20days%0d%0a%0d%0aHyperNumber%3a%20HPN_mailbydoc_00_0xF2-url-017259/" class="button">立刻購買</a>
     </div>
   </div>
 </body>
