--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Lucas-0714 | GitHub</title>
     <style>
       body {
-        background-image: url('https://i.imgur.com/9DXLRfW.jpeg');
+        background-image: url('https://lucas-0714.github.io/green-background.png');
       }
       
       .sticky-text {
