--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         position: -webkit-sticky; /* Safari 瀏覽器需要加前綴 */
         position: sticky;
         top: 0; /* 當元素滾動到視窗頂部時固定 */
-        background-image: url('https://i.imgur.com/34wXOw1.jpeg');
+        background-image: url('https://lucas-0714.github.io/green-background.png');
         padding: 10px;
         text-align: right;
         z-index: 100; /* 確保在內容之上 */
