--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <head>
     <title>Lucas-0714 | GitHub</title>
     <style>
+      * {
+        font-family: sans-serif;
+      }
       body {
         background-image: url('https://lucas-0714.github.io/green-background.png');
       }
